go/chatxdk/include/chat_xdk.h

/**
 * Opaque handle to a Chat SDK instance.
 *
 * Created by [`chat_xdk_new`], freed by [`chat_xdk_free`].
 */
typedef struct ChatHandle ChatHandle;
/**
 * Opaque handle to an incremental stream decryptor.
 *
 * Created by [`chat_xdk_stream_decryptor_new`], freed by
 * [`chat_xdk_stream_decryptor_free`].
 */
typedef struct StreamDecryptorHandle StreamDecryptorHandle;
/**
 * Opaque handle to an incremental stream encryptor.
 *
 * Created by [`chat_xdk_stream_encryptor_new`], freed by
 * [`chat_xdk_stream_encryptor_free`].
 */
typedef struct StreamEncryptorHandle StreamEncryptorHandle;
/**
 * Result type returned by FFI functions.
 *
 * On success: `data` contains the result (may be NULL for void operations),
 *             `error` is NULL.
 * On error:   `data` is NULL, `error` contains the error message.
 *
 * Both fields must be freed with `chat_xdk_free_string` when non-NULL.
 */
typedef struct FfiResult {
  char *data;
  char *error;
} FfiResult;
/**
 * Encode bytes to standard base64.
 */
struct FfiResult chat_xdk_bytes_to_base64(const uint8_t *data, uintptr_t data_len);
/**
 * Decode base64 to bytes. On success, `data` holds base64 of the decoded bytes (FFI-safe).
 */
struct FfiResult chat_xdk_base64_to_bytes(const char *b64);
/**
 * Encode bytes to lowercase hex.
 */
struct FfiResult chat_xdk_bytes_to_hex(const uint8_t *data, uintptr_t data_len);
/**
 * Decode hex to bytes. On success, `data` holds base64 of the decoded bytes (FFI-safe).
 */
struct FfiResult chat_xdk_hex_to_bytes(const char *hex);
/**
 * Detect MIME type from magic bytes. Empty string if unknown.
 */
struct FfiResult chat_xdk_detect_mime_type(const uint8_t *data, uintptr_t data_len);
/**
 * JSON `{"width":N,"height":M}` or the literal `null` if dimensions cannot be determined.
 */
struct FfiResult chat_xdk_detect_image_dimensions(const uint8_t *data, uintptr_t data_len);
/**
 * Create a new Chat SDK instance.
 *
 * Returns an opaque handle that must be freed with [`chat_xdk_free`].
 * Returns NULL on failure.
 */
struct ChatHandle *chat_xdk_new(void);
/**
 * Free a Chat SDK instance.
 *
 * After calling this, the handle is invalid and must not be used.
 * Passing NULL is a no-op.
 */
void chat_xdk_free(struct ChatHandle *handle);
/**
 * Free a string returned by any chat_xdk function.
 *
 * The buffer is zeroized before it is freed: some returns carry secrets
 * (e.g. exported keys), so every returned string is wiped rather than
 * deciding per call site.
 *
 * Passing NULL is a no-op.
 */
void chat_xdk_free_string(char *s);
/**
 * Create a stream encryptor for a base64 conversation key. Returns NULL on a
 * bad key; free the handle with [`chat_xdk_stream_encryptor_free`].
 */
struct StreamEncryptorHandle *chat_xdk_stream_encryptor_new(const char *conversation_key_b64);
/**
 * Free a stream encryptor handle.
 */
void chat_xdk_stream_encryptor_free(struct StreamEncryptorHandle *handle);
/**
 * Create a stream decryptor for a base64 conversation key. Returns NULL on a
 * bad key; free the handle with [`chat_xdk_stream_decryptor_free`].
 */
struct StreamDecryptorHandle *chat_xdk_stream_decryptor_new(const char *conversation_key_b64);
/**
 * Decrypt a base64 ciphertext chunk; returns base64 plaintext available so far.
 */
struct FfiResult chat_xdk_stream_decryptor_push(struct StreamDecryptorHandle *handle,
                                                const char *ciphertext_b64);
/**
 * Decrypt the final frame as base64. Errors if the stream was truncated. The
 * handle must still be freed afterwards.
 */
struct FfiResult chat_xdk_stream_decryptor_finish(struct StreamDecryptorHandle *handle);
/**
 * Free a stream decryptor handle.
 */
void chat_xdk_stream_decryptor_free(struct StreamDecryptorHandle *handle);
/**
 * Sign data with the signing key. Returns base64-encoded signature.
 */
struct FfiResult chat_xdk_sign(const struct ChatHandle *handle,
                               const uint8_t *data,
                               uintptr_t data_len);
/**
 * Verify a signature.
 *
 * Returns 1 if valid, 0 if invalid, -1 on error.
 */
int32_t chat_xdk_verify(const struct ChatHandle *handle,
                        const char *public_key_b64,
                        const char *signature_b64,
                        const uint8_t *data,
                        uintptr_t data_len);
/**
 * Verify that a signing key is authentically bound to an identity key.
 *
 * All three arguments are base64 strings. Returns 1 if the binding is
 * valid, 0 if it is not, and -1 on error (e.g. malformed input).
 */
int32_t chat_xdk_verify_key_binding(const struct ChatHandle *handle,
                                    const char *identity_public_key_b64,
                                    const char *signing_public_key_b64,
                                    const char *identity_public_key_signature_b64);
/**
 * Report whether the loaded identity public key is the key in
 * `public_key_b64` (raw SEC1 point or SPKI/DER, base64-encoded).
 *
 * Returns 1 on a match, 0 on a mismatch, and -1 on error (no identity
 * keypair loaded or malformed input).
 */
int32_t chat_xdk_matches_registered_key(const struct ChatHandle *handle,
                                        const char *public_key_b64);