crates/dotnet/dotnet/ChatXdk/NativeMethods.g.cs


        /// <summary>
        ///  Decrypt a base64 ciphertext chunk; returns base64 plaintext available so far.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_stream_decryptor_push", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_stream_decryptor_push(StreamDecryptorHandle* handle, byte* ciphertext_b64);

        /// <summary>
        ///  Decrypt the final frame as base64. Errors if the stream was truncated. The
        ///  handle must still be freed afterwards.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_stream_decryptor_finish", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_stream_decryptor_finish(StreamDecryptorHandle* handle);

        /// <summary>
        ///  Free a stream decryptor handle.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_stream_decryptor_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void chat_xdk_stream_decryptor_free(StreamDecryptorHandle* handle);

        /// <summary>
        ///  Sign arbitrary data with the signing key.
        ///
        ///  Returns a base64-encoded ECDSA signature (64 bytes).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_sign", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_sign(ChatHandle* handle, byte* data, nuint data_len);

        /// <summary>
        ///  Verify an ECDSA signature.
        ///
        ///  `public_key_b64` — base64-encoded signing public key (SEC1 or SPKI).
        ///  `signature_b64` — base64-encoded signature from `chat_xdk_sign`.
        ///  `data` / `data_len` — the original signed data.
        ///
        ///  Returns 1 if valid, 0 if invalid, -1 on error.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_verify", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int chat_xdk_verify(ChatHandle* handle, byte* public_key_b64, byte* signature_b64, byte* data, nuint data_len);

        /// <summary>
        ///  Verify that a signing key is authentically bound to an identity key.
        ///
        ///  All three arguments are base64 strings. Returns 1 if valid, 0 if not,
        ///  and -1 on error.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_verify_key_binding", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int chat_xdk_verify_key_binding(ChatHandle* handle, byte* identity_public_key_b64, byte* signing_public_key_b64, byte* identity_public_key_signature_b64);

        /// <summary>
        ///  Report whether the loaded identity public key is the key in
        ///  `public_key_b64` (raw SEC1 point or SPKI/DER, base64-encoded).
        ///
        ///  Returns 1 on a match, 0 on a mismatch, and -1 on error (no identity
        ///  keypair loaded or malformed input).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_matches_registered_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int chat_xdk_matches_registered_key(ChatHandle* handle, byte* public_key_b64);

        /// <summary>
        ///  Encode bytes to standard base64.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_bytes_to_base64", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_bytes_to_base64(byte* data, nuint data_len);

        /// <summary>
        ///  Decode base64 to bytes. On success, `data` holds base64 of the decoded bytes (FFI-safe).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_base64_to_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_base64_to_bytes(byte* b64);

        /// <summary>
        ///  Encode bytes to lowercase hex.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_bytes_to_hex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_bytes_to_hex(byte* data, nuint data_len);

        /// <summary>
        ///  Decode hex to bytes. On success, `data` holds base64 of the decoded bytes (FFI-safe).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_hex_to_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_hex_to_bytes(byte* hex);

        /// <summary>
        ///  Detect MIME type from magic bytes. Empty string if unknown.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_detect_mime_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_detect_mime_type(byte* data, nuint data_len);

        /// <summary>
        ///  JSON `{"width":N,"height":M}` or the literal `null` if dimensions cannot be determined.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_detect_image_dimensions", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_detect_image_dimensions(byte* data, nuint data_len);


    }

    /// <summary>
    ///  Result returned by every fallible FFI function.
    ///
    ///  Exactly one of `data` / `error` is non-NULL on return.
    ///  The non-NULL field **must** be freed with `chat_xdk_free_string`.
    ///  If both are NULL the operation succeeded with no output (void).
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct FfiResult
    {
        public byte* data;
        public byte* error;
    }

    /// <summary>
    ///  Opaque handle to a live Chat SDK session.
    ///
    ///  Allocated by `chat_xdk_new`, released by `chat_xdk_free`.
    ///  All methods require a non-NULL handle; passing NULL returns an error result
    ///  or -1 / no-op, depending on the function's return type.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct ChatHandle
    {
    }

    /// <summary>
    ///  Opaque handle to an incremental stream encryptor.
    ///
    ///  Created by `chat_xdk_stream_encryptor_new`, freed by
    ///  `chat_xdk_stream_encryptor_free`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct StreamEncryptorHandle
    {
    }

    /// <summary>
    ///  Opaque handle to an incremental stream decryptor.
    ///
    ///  Created by `chat_xdk_stream_decryptor_new`, freed by
    ///  `chat_xdk_stream_decryptor_free`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct StreamDecryptorHandle
    {
    }



}
